<?xml version="1.0"?>
<package format="3">
  <name>odom_wheel</name> <!-- Replace with your actual package name -->
  <version>0.1.0</version>
  <description>Open-loop odometry estimation node based on /cmd_vel for a 4-wheeled robot without encoders.</description>

  <maintainer email="brian.deegan82@gmail.com">Your Name</maintainer>
  <license>MIT</license>

  <!-- Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core dependencies -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>

  <!-- For Python-based launch files -->
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <!-- Optional: For parameter YAML parsing -->
  <exec_depend>ament_index_python</exec_depend>

  <!-- Build, export, and test settings -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
